# assistant

./: .dockerignore  .env.example  .gitignore  ACHIEVEMENT_SUMMARY.md  ADD_PRODUCT_TO_INVENTORY_FLOW.md  ADMIN_API_REFERENCE.md  ADMIN_CATALOG_IMPROVEMENTS.md  ADMIN_CATEGORIES_SUCCESS.md  ADMIN_DASHBOARD_INTEGRATION.md  ADMIN_DELETE_USER_SUCCESS.md  ADMIN_PRODUCT_EDIT_CODE.md  ADMIN_USERS_COMPLETE.md  ADMIN_USERS_NAME_FIX.md  AI_INSIGHTS_STATUS.md  AI_INSIGHTS_V1_STABILIZATION.md  AI_INSIGHTS_V1_TEST_REPORT.md  AI_INSIGHTS_V1_VALIDATOR_SUCCESS.md  AI_INSIGHTS_V2_ARCHITECTURE.md  ARCHITECTURE.md  ASSISTANT_COMPLETE.md  BACKEND_AUTOFILL_VERIFICATION.md  BLOG_FRONTEND_INTEGRATION.md  CATALOG_SEARCH_RUSSIAN.md  CATALOG_TRANSLATIONS_FIX.md  CATALOG_UNIQUENESS_AND_SOFT_DELETE.md  CATALOG_UNIQUENESS_SUCCESS.md  Cargo.toml  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.koyeb  EXPIRATION_WARNINGS_IMPLEMENTATION.md  FINAL_CHECKLIST_AND_FIXES.md  FRONTEND_ADMIN_GUIDE.md  FRONTEND_API_REFERENCE.md  FRONTEND_ARCHITECTURE.md  FRONTEND_AUTO_TRANSLATE_GUIDE.md  FRONTEND_AUTO_TRANSLATE_QUICKSTART.md  FRONTEND_CMS_INTEGRATION.md  FRONTEND_DISHES_GUIDE.md  FRONTEND_EDIT_PRODUCTS_GUIDE.md  (+139 more)
crates/geometry_engine/: Cargo.toml
crates/geometry_engine/src/: lib.rs
crates/geometry_engine/src/boolean/: classify.rs  curve_curve_intersection.rs  face_face_intersection.rs  imprint.rs  intersect.rs  mod.rs  operation.rs  rebuild_shell.rs  split_edges.rs  split_faces.rs  subtract.rs  union.rs  validation.rs
crates/geometry_engine/src/brep/: builder.rs  edge_curve.rs  face_surface.rs  healer.rs  mod.rs  model.rs  pcurve.rs  store.rs  trim.rs  validator.rs
crates/geometry_engine/src/curves/: arc.rs  bezier.rs  bspline.rs  circle.rs  curve.rs  curve_eval.rs  curve_intersection.rs  curve_project.rs  ellipse.rs  line.rs  mod.rs  nurbs_curve.rs  trim_curve.rs
crates/geometry_engine/src/diagnostics/: error.rs  gap_finder.rs  healing.rs  mod.rs  report.rs  self_intersection.rs  tiny_edge_finder.rs  validate_body.rs  validate_face.rs  validate_mesh.rs  validate_shell.rs
crates/geometry_engine/src/fillet/: blend_surface.rs  chamfer.rs  corner_patch.rs  edge_chain.rs  fillet.rs  mod.rs  rolling_ball.rs  trim_and_stitch.rs  variable_radius.rs
crates/geometry_engine/src/history/: dependency_graph.rs  document.rs  mod.rs  operation.rs  operation_id.rs  rebuild.rs  undo_redo.rs
crates/geometry_engine/src/ids/: entity_id.rs  id.rs  mod.rs
crates/geometry_engine/src/import_export/: brep_json.rs  dxf.rs  gltf.rs  mod.rs  obj.rs  step.rs  stl.rs  svg.rs
crates/geometry_engine/src/math/: aabb.rs  bbox_tree.rs  line.rs  matrix3.rs  matrix4.rs  mod.rs  plane.rs  point2.rs  point3.rs  predicates.rs  quaternion.rs  ray.rs  real.rs  segment.rs  tolerance.rs  transform.rs  vec2.rs  vec3.rs
crates/geometry_engine/src/mesh/: error.rs  gltf.rs  gpu_mesh.rs  mesh.rs  mesh_part.rs  mod.rs  normals.rs  obj.rs  stl.rs  weld.rs
crates/geometry_engine/src/nurbs/: basis.rs  bspline_curve.rs  bspline_surface.rs  control_point.rs  degree_elevation.rs  derivatives.rs  fitting.rs  interpolation.rs  knot_insertion.rs  knot_vector.rs  mod.rs  nurbs_curve.rs  nurbs_surface.rs
crates/geometry_engine/src/ops/: bevel.rs  csg.rs  delete_face.rs  draft.rs  extrude.rs  extrude_face.rs  extrude_profile.rs  lathe.rs  loft.rs  merge_faces.rs  mod.rs  move_face.rs  offset_face.rs  offset_profile.rs  revolve.rs  split_face.rs  sweep.rs  thicken.rs
crates/geometry_engine/src/profile/: lathe_profile.rs  mod.rs  orientation.rs  profile2.rs  profile3.rs  self_intersection.rs  triangulate.rs  validate.rs  validated.rs
crates/geometry_engine/src/selection/: edge_loop.rs  face_loop.rs  hit_test.rs  mod.rs  pick_edge.rs  pick_face.rs  pick_vertex.rs  ray.rs  selection_set.rs
crates/geometry_engine/src/shelling/: mod.rs  offset_face.rs  offset_surface.rs  shell.rs  stitch.rs  thicken.rs  validation.rs
crates/geometry_engine/src/sketch/: mod.rs  to_solid.rs
crates/geometry_engine/src/sketch/commands/: add_edge.rs  add_point.rs  mod.rs  move_point.rs  result.rs
crates/geometry_engine/src/sketch/constraints/: coincident.rs  equal_length.rs  fix.rs  fixed_length.rs  horizontal.rs  midpoint.rs  mod.rs  parallel.rs  perpendicular.rs  vertical.rs
crates/geometry_engine/src/sketch/profiles/: detect.rs  mod.rs  repair.rs
crates/geometry_engine/src/surfaces/: cone_surface.rs  cylinder_surface.rs  lofted_surface.rs  mod.rs  nurbs_surface.rs  plane_surface.rs  ruled_surface.rs  sphere_surface.rs  surface.rs  surface_eval.rs  surface_intersection.rs  surface_project.rs  swept_surface.rs  torus_surface.rs  trimmed_surface.rs
crates/geometry_engine/src/tessellation/: adaptive.rs  curve_tessellator.rs  face_tessellator.rs  mesh_with_metadata.rs  mod.rs  options.rs  tessellator.rs  triangulate_polygon.rs  triangulate_surface.rs
crates/geometry_engine/src/tools/: circle.rs  copy.rs  edge_extrude.rs  mod.rs  rect.rs  tool_state.rs  types.rs
crates/geometry_engine/src/topology/: adjacency.rs  body.rs  coedge.rs  edge.rs  face.rs  ids.rs  loop.rs  mod.rs  orientation.rs  shell.rs  solid.rs  validation.rs  vertex.rs
crates/geometry_engine/src/units/: angle.rs  grid.rs  mm.rs  mod.rs
crates/geometry_engine/src/wasm/: bindings.rs  mod.rs
crates/sketch_engine/: Cargo.toml
crates/sketch_engine/src/: commands.rs  constraints.rs  lib.rs  profile_repair.rs  sketch.rs  solver.rs  wasm.rs
crates/sketch_engine/src/commands/: add_edge.rs  add_point.rs  mod.rs  move_point.rs  result.rs
crates/sketch_engine/src/constraints/: coincident.rs  equal_length.rs  fix.rs  fixed_length.rs  horizontal.rs  midpoint.rs  mod.rs  parallel.rs  perpendicular.rs  vertical.rs
crates/sketch_engine/src/profiles/: detect.rs  mod.rs  repair.rs
crates/sketch_engine/src/solver/: config.rs  diagnostics.rs  mod.rs  residual.rs  result.rs
crates/sketch_engine/src/types/: edge.rs  mod.rs  point.rs  sketch.rs  working_plane.rs
crates/sketch_engine/src/validation/: mod.rs
crates/sketch_engine/src/wasm/: mod.rs
crates/sketch_engine/tests/: residual_diagnostics.rs
(+1064 files in other folders)
