[package]
name = "restaurant-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }

# Types
uuid = { version = "1.6", features = ["v4", "serde"] }
time = { version = "=0.3.36", features = ["serde", "macros", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }

# Security
argon2 = "0.5"
jsonwebtoken = "9.2"
sha2 = "0.10"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"

# Utilities
async-trait = "0.1"
rand = "0.8"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
