[package]
name = "restaurant-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "crates/sketch_engine"]

[dependencies]
# Shared sketch geometry engine (also compilable to WASM)
sketch_engine = { path = "crates/sketch_engine" }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde"] }

# Types
uuid = { version = "1.6", features = ["v4", "serde"] }
time = { version = "=0.3.36", features = ["serde", "macros", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }

# AWS SDK for Cloudflare R2 (S3-compatible) - minimal features
aws-sdk-s3 = "1.15"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
bytes = "1.5"

# Security
argon2 = "0.5"
jsonwebtoken = "9.2"
sha2 = "0.10"
base64ct = "=1.6.0"  # Pin to avoid edition2024
base64 = "0.22"      # Image → base64 for Gemini Vision multimodal requests
hmac = "0.12"        # Stripe webhook signature verification
hex = "0.4"          # Hex encoding for HMAC digest
subtle = "2.5"       # Constant-time comparison for signature check

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client for external APIs (Groq)
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"

# Rate limiting
governor = "0.6"

# In-memory cache (TTL, async, zero-alloc lookups)
mini-moka = "0.10"

# Utilities
async-trait = "0.1"
rand = "0.8"
home = "=0.5.9"  # Pin to avoid edition2024
regex-lite = "0.1.9"
deunicode = "1.6.2"
truck-modeling = "0.6.0"
truck-meshalgo = "0.4.0"
truck-polymesh = "0.6.0"
truck-stepio = "0.3.0"
truck-topology = "0.6.0"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
