[package]
name        = "geometry_engine"
version     = "0.1.0"
edition     = "2021"
description = "Procedural geometry kernel: extrude, lathe, CSG, OBJ/GLTF export"

# No external geometry deps — pure Rust, auditable, zero unsafe.
[dependencies]
serde      = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default     = []
serde       = ["dep:serde", "dep:serde_json"]
wasm        = []           # enables wasm/bindings.rs — set by the WASM build profile

[lib]
name = "geometry_engine"
path = "src/lib.rs"

[dev-dependencies]
# nothing — all tests are pure unit tests inside each module
