[package]
name        = "geometry_engine"
version     = "0.1.0"
edition     = "2021"
description = "Procedural geometry kernel: extrude, lathe, CSG, OBJ/GLTF export"

[lib]
name       = "geometry_engine"
path       = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde              = { version = "1",   features = ["derive"], optional = true }
serde_json         = { version = "1",   optional = true }
wasm-bindgen       = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
default = []
serde   = ["dep:serde", "dep:serde_json"]
wasm    = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:serde", "dep:serde_json"]

[dev-dependencies]
# nothing -- all tests are pure unit tests inside each module
