[package]
name        = "geometry_engine"
version     = "0.1.0"
edition     = "2021"
description = "Procedural geometry kernel: extrude, lathe, CSG, OBJ/GLTF export"

[lib]
name       = "geometry_engine"
path       = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde              = { version = "1",   features = ["derive"] }
serde_json         = { version = "1" }
wasm-bindgen       = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
default = []
serde   = []
wasm    = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dev-dependencies]
# nothing -- all tests are pure unit tests inside each module
