[package]
name = "sketch_engine"
version = "0.1.0"
edition = "2021"
description = "Shared Rust SketchGraph engine (validation, profile detection, commands). Compiles to native + WASM."
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable wasm-bindgen exports (build with `wasm-pack build --features wasm --target web`).
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
